Removed the project cover and fixed a issue of hero guy on small screens and layout for the details page is completed

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -80,9 +80,13 @@
     @media only screen and(max-width:790px) {
       order: 1;
       width: 50%;
+      transform: translateX(-2rem);
     }
     @media only screen and(max-width:500px) {
       width: 80%;
+    }
+    @media only screen and(max-width:425px) {
+      transform: translateX(-1.5rem);
     }
     img {
       max-width: 60%;
